agregado textos y fixed sus posiciones

--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
         height: 100px;
         width: 160px;
         transition: 1s;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        flex-direction: column;
+        text-align: center;
+        font-size: 50px;
       }
       html, body{
         width: 100%;
         height:100%;
+      }
+      .msg{
+        color: white;
       }
     </style>
   </head>
@@ -24,19 +33,33 @@
       function animacionup() {
         var gift = document.getElementById('gift');
         var res = Math.floor((Math.random()*2)+1);
+        var msg = document.createElement('H1');
+
         if (res == 1) {
           gift.style.backgroundColor = "red";
+          var text = document.createTextNode("NEGATIVO");
+
         }else{
           gift.style.backgroundColor = "green";
+          var text = document.createTextNode("POSITIVO");
         }
         gift.style.width= "90%";
         gift.style.height= "90%";
+
+        msg.appendChild(text);
+        msg.setAttribute('class','msg');
+        gift.appendChild(msg);
 
         gift.removeAttribute('onclick');
         gift.setAttribute('onclick','animaciondown()');
       }
       function animaciondown() {
         var gift = document.getElementById('gift');
+
+        while (gift.hasChildNodes()) {
+          gift.removeChild(gift.firstChild);
+        }
+
         gift.style.width= "160px";
         gift.style.height= "100px";
         gift.style.backgroundColor = "white";
